--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,17 @@
 
 			<artifactId>mysql-connector-java</artifactId>
 
+			<scope>runtime</scope>
+
 			<version>8.0.28</version>
 
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>7.0.4.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
